...
    meccan: json['revelation'] == 'Mecca',
    ayahs: json['ayahs']! as int,
  );

  final int number;

  /// Transliterated, e.g. "Al-Faatiha".
  final String name;

  /// Meaning, e.g. "The Opening".
  final String englishName;
  final String arabicName;
  final bool meccan;
...
